# invokify

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: blackjack_invokify.py  example_invokify.py  mutiple_commands.py  passthrough_command_chain.py  simple_invokify_command.py
invokify/: __init__.py  invokify.py  parser.py
tests/: test_commands.py  test_invoke_engine.py  test_meta.py  test_parsing.py  test_subcommands.py
