[tool.poetry]
name = "invokify"
version = "0.1.0"
description = ""
authors = ["iRedSC"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tokenstream = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
